fix: ImmutableList에서 sort 불가 오류 해결 (toList() -> collect(Collectors.toList()))